--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.3.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
